GhostIngotの表記名を設定

--- a/src/main/resources/assets/ghostarmormod/lang/en_us.json
+++ b/src/main/resources/assets/ghostarmormod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "itemGroup.ghost_armor_main" : "GhostArmorMod"
+  "itemGroup.ghost_armor_main" : "GhostArmorMod",
+  "item.ghostarmormod.ghost_ingot" : "GhostIngot"
 }
