キーバインドの表示名を設定

--- a/src/main/resources/assets/ghostarmormod/lang/en_us.json
+++ b/src/main/resources/assets/ghostarmormod/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "itemGroup.ghost_armor_main" : "GhostArmorMod",
-  "item.ghostarmormod.ghost_ingot" : "GhostIngot"
+  "item.ghostarmormod.ghost_ingot" : "GhostIngot",
+  "key.categories.ghostarmormod" : "GhostArmorMod",
+  "key.ghostarmormod.rocketMode" : "RocketMode"
 }
