--- a/src/main/resources/assets/ghostarmormod/lang/ja_jp.json
+++ b/src/main/resources/assets/ghostarmormod/lang/ja_jp.json
@@ -1,4 +1,6 @@
 {
   "itemGroup.ghost_armor_main" : "ゴーストアーマーMOD",
-  "item.ghostarmormod.ghost_ingot" : "幽霊の魂の延べ棒"
+  "item.ghostarmormod.ghost_ingot" : "幽霊の魂の延べ棒",
+  "key.categories.ghostarmormod" : "ゴーストアーマーMOD",
+  "key.ghostarmormod.rocketMode" : "ロケットモード"
 }
